# SecurePoll-RW

Backend/: .env.example  .gitignore  BACKEND_REPORT.md  BUILD_SUMMARY.md  Dockerfile  Makefile  README.md  SecurePoll-RW.postman_collection.json  SecurePoll-RW.postman_environment.json  THESIS.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  setup.sh  setup_supabase.sh
Backend/.github/workflows/: ci.yml
Backend/app/: __init__.py  main.py
Backend/app/core/: audit.py  config.py  crypto.py  db.py  deps.py  enums.py  security.py
Backend/app/db/migrations/: env.py
Backend/app/db/models/: __init__.py  audit.py  base.py  biometric.py  fraud.py  geography.py  people.py  verification.py  voter.py
Backend/app/schemas/: __init__.py
Backend/ml/: inference.py
Backend/ml/providers/: __init__.py  base.py  insightface_backend.py  liveness.py  synthetic.py
Backend/scripts/: ai_faultcheck.py  benchmark100.py  benchmark_lfw.py  demo_audit.py  demo_enroll.py  demo_verify.py  gen_postman.py  gen_requirements.py  seed.py  smoke_test.py  test_ai_pipeline.py  validate_pipeline.py
Backend/tests/: test_analytics.py  test_audit_extended.py  test_auth.py  test_biometrics.py  test_concurrency.py  test_fraud.py  test_geography.py  test_integration.py  test_keys.py  test_officers.py  test_verification.py  test_voters.py
Backend/tests/unit/: conftest.py  test_audit_hash.py  test_create_schemas.py  test_crypto.py  test_enums.py  test_faiss_index.py  test_liveness.py  test_ratelimit.py  test_schemas.py  test_security.py  test_verification_decision.py
(+186 files in other folders)
